[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Characters/Ch-hold-gun.png" type="Texture" id=1]
[ext_resource path="res://Character.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Characters/Ch-hold-plant.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Characters/Ch-hold-gun2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Bullet/alev2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Bullet/alev1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Bullet/alev3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Bullet/mermi-kovani.png" type="Texture" id=8]
[ext_resource path="res://Sounds/gun2.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/foot.ogg" type="AudioStream" id=10]
[ext_resource path="res://gunparticlesmaterial.tres" type="Material" id=11]
[ext_resource path="res://Charactergunprocessmaterial.tres" type="Material" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlantSprite" type="Sprite" parent="."]
visible = false
rotation = 1.5708
texture = ExtResource( 3 )
offset = Vector2( 0, -12 )

[node name="GunSprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )
offset = Vector2( 0, -20 )

[node name="Particles2D" type="Particles2D" parent="GunSprite"]
material = ExtResource( 11 )
position = Vector2( 21.6485, -51.677 )
emitting = false
lifetime = 1.5
speed_scale = 1.5
local_coords = false
process_material = ExtResource( 12 )
texture = ExtResource( 8 )

[node name="Gun2Sprite" type="Sprite" parent="."]
visible = false
rotation = 1.5708
texture = ExtResource( 4 )
offset = Vector2( 0, -20 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 112, 16 )
rotation = 1.5708
frames = SubResource( 2 )
frame = 2

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 67.7387, 16.7601 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="FootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
